update swagger.yml and regenerate
