# restapi/configure_todo_list.go
@@ -34,8 +34,17 @@ func configureAPI(api *operations.TodoListAPI) http.Handler {
 
 	api.JSONProducer = runtime.JSONProducer()
 
-	api.TodosGetHandler = todos.GetHandlerFunc(func(params todos.GetParams) middleware.Responder {
-		return middleware.NotImplemented("operation todos.Get has not yet been implemented")
+	api.TodosAddOneHandler = todos.AddOneHandlerFunc(func(params todos.AddOneParams) middleware.Responder {
+		return middleware.NotImplemented("operation todos.AddOne has not yet been implemented")
+	})
+	api.TodosDestroyOneHandler = todos.DestroyOneHandlerFunc(func(params todos.DestroyOneParams) middleware.Responder {
+		return middleware.NotImplemented("operation todos.DestroyOne has not yet been implemented")
+	})
+	api.TodosFindTodosHandler = todos.FindTodosHandlerFunc(func(params todos.FindTodosParams) middleware.Responder {
+		return middleware.NotImplemented("operation todos.FindTodos has not yet been implemented")
+	})
+	api.TodosUpdateOneHandler = todos.UpdateOneHandlerFunc(func(params todos.UpdateOneParams) middleware.Responder {
+		return middleware.NotImplemented("operation todos.UpdateOne has not yet been implemented")
 	})
 
 	api.ServerShutdown = func() {}
